# learning_rust

./: LICENCE  LICENCE.md  README.md  remove.sh
actix_test/: Cargo.toml
actix_test/src/: main.rs
closures/: Cargo.toml
closures/src/: main.rs
error_handling/: Cargo.toml  hello.txt
error_handling/src/: main.rs
guessing_game/: Cargo.toml
hd_dev_proxy/: Cargo.toml
hd_dev_proxy/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs
restaurant/: Cargo.toml
restaurant/src/: lib.rs
test_1/: Cargo.toml
test_loop_cpu/: Cargo.toml
test_loop_cpu/src/: main.rs
test_reqwest/: Cargo.toml
test_reqwest/src/: main.rs
traits/: Cargo.toml
traits/src/: main.rs
variables/: Cargo.toml
variables/src/: main.rs
