[package]
name = "hd_dev_proxy"
version = "0.1.0"
authors = ["Ayush Singh <ayush.singh@hyperdart.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"