[package]
name = "test_reqwest"
version = "0.1.0"
authors = ["Ayush Singh <ayush.singh@hyperdart.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
